[gd_scene load_steps=19 format=3 uid="uid://y601wptx5oci"]

[ext_resource type="Script" path="res://UserInterface/Inventory/Inventory.gd" id="1_ve0du"]
[ext_resource type="Texture2D" uid="uid://turnvte6bt6u" path="res://UserInterface/UI Sprint 2/UI Boxes/Inventory Box4k.png" id="2_desvg"]
[ext_resource type="FontFile" uid="uid://7f0bpaqn1xgt" path="res://UserInterface/Fonts/Ubuntu-M.ttf" id="3_yc3kk"]
[ext_resource type="Texture2D" uid="uid://dq4kggpkenyu2" path="res://UserInterface/Shops/Icon/Item 1.png" id="4_parll"]
[ext_resource type="Theme" uid="uid://bwo8ukvcke31h" path="res://UserInterface/theme.tres" id="5_x660l"]
[ext_resource type="Texture2D" uid="uid://bgjercw7h05no" path="res://UserInterface/Inventory/selected.png" id="6_da78q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lf3bk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iornr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ologj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_567ov"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ke3w6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e4ux4"]

[sub_resource type="FontFile" id="13"]
fallbacks = Array[Font]([ExtResource("3_yc3kk")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[sub_resource type="Theme" id="2"]
default_font = SubResource("13")
ItemList/colors/font_color = Color(0.270588, 0.196078, 0.423529, 1)
ItemList/colors/guide_color = Color(0.7, 0.7, 0.7, 0.25)
ItemList/styles/bg = SubResource("StyleBoxEmpty_lf3bk")
ItemList/styles/focus = SubResource("StyleBoxEmpty_iornr")
ItemList/styles/hovered = SubResource("StyleBoxEmpty_ologj")
ItemList/styles/panel = SubResource("StyleBoxEmpty_567ov")
ItemList/styles/selected = SubResource("StyleBoxEmpty_ke3w6")
ItemList/styles/selected_focus = SubResource("StyleBoxEmpty_e4ux4")

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3_yc3kk")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/64/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[sub_resource type="Theme" id="5"]
default_font = SubResource("4")
Label/colors/font_color = Color(0.270588, 0.196078, 0.423529, 1)
Label/font_sizes/font_size = 64
RichTextLabel/colors/default_color = Color(0.270588, 0.196078, 0.423529, 1)

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("3_yc3kk")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="Theme" id="11"]
default_font = SubResource("10")
RichTextLabel/colors/default_color = Color(0.270588, 0.196078, 0.423529, 1)

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ve0du")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -331.0
offset_right = 805.0
offset_bottom = 749.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.729769, 0.747665)
texture = ExtResource("2_desvg")
stretch_mode = 5

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 365.0
offset_top = 219.0
offset_right = 739.0
offset_bottom = 582.0
theme = SubResource("2")
theme_override_font_sizes/font_size = 40
auto_height = true
item_count = 7
icon_scale = 0.5
item_0/text = "Item 0"
item_0/icon = ExtResource("4_parll")
item_1/text = "Item 1"
item_2/text = "Item 2"
item_3/text = "Item 3"
item_4/text = "Item 4"
item_5/text = "Item 5"
item_6/text = "Item 6"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 379.0
offset_top = 143.0
offset_right = 721.0
offset_bottom = 218.0
theme = ExtResource("5_x660l")
theme_override_font_sizes/font_size = 60
text = "INVENTORY"

[node name="Description" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 781.0
offset_top = 150.0
offset_right = 1611.0
offset_bottom = 532.0
theme = SubResource("5")
theme_override_font_sizes/normal_font_size = 50
text = "Very interesting item description, or maybe it's cryptic for no reason"

[node name="Money" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 759.0
offset_right = 570.0
offset_bottom = 799.0
theme = SubResource("11")
theme_override_font_sizes/normal_font_size = 30
text = "Artifacts:"

[node name="Slot1" type="Control" parent="."]
anchors_preset = 0
offset_top = -6.0
offset_right = 40.0
offset_bottom = 34.0

[node name="Selected" type="Sprite2D" parent="Slot1"]
visible = false
position = Vector2(1496, 632)
scale = Vector2(0.240234, 0.247559)
texture = ExtResource("6_da78q")

[node name="TextureRect" type="TextureRect" parent="Slot1"]
layout_mode = 0
offset_left = 1432.0
offset_top = 568.0
offset_right = 1557.0
offset_bottom = 696.0
expand_mode = 2

[node name="Slot2" type="Control" parent="."]
anchors_preset = 0
offset_left = -154.0
offset_top = 145.0
offset_right = -114.0
offset_bottom = 185.0

[node name="Selected" type="Sprite2D" parent="Slot2"]
visible = false
position = Vector2(1496, 632)
scale = Vector2(0.240234, 0.247559)
texture = ExtResource("6_da78q")

[node name="TextureRect" type="TextureRect" parent="Slot2"]
layout_mode = 0
offset_left = 1432.0
offset_top = 568.0
offset_right = 1557.0
offset_bottom = 696.0
expand_mode = 2

[node name="SoundEffect" type="AudioStreamPlayer" parent="."]
bus = &"Sound Effects"

[node name="IconContainer" type="HFlowContainer" parent="."]
layout_mode = 2
offset_left = 816.0
offset_top = 648.0
offset_right = 1176.0
offset_bottom = 844.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="IconContainer"]
custom_minimum_size = Vector2(110, 94)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 2
stretch_mode = 5

[node name="SelectedContainer" type="HFlowContainer" parent="."]
layout_mode = 2
offset_left = 822.0
offset_top = 652.0
offset_right = 1171.0
offset_bottom = 840.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="SelectedContainer"]
visible = false
custom_minimum_size = Vector2(110, 92)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_da78q")
expand_mode = 2
stretch_mode = 5

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
